src/assets/stylesheets/main.scss
---
---

// Files that allow us to use Formation’s Sass functions, variables, and mixins
@import '../../../node_modules/@department-of-veterans-affairs/formation/sass/base/b-variables';
@import '../../../node_modules/@department-of-veterans-affairs/formation/sass/base/_b-breakpoints';
@import '../../../node_modules/@department-of-veterans-affairs/formation/sass/base/b-functions';
@import '../../../node_modules/@department-of-veterans-affairs/formation/sass/base/_b-mixins';

@import "variables";
@import "media";
@import "va-notice";
@import "header";
@import "subhead";
@import "tabs";
@import "research-quotes";
@import "tiles";
@import "projects";
@import "screenshots";
@import "footer";
@import "migration";
@import "northstar";
@import "service_tile";

h2 {
  margin-top: units(4);
  margin-bottom: 0;
  font-size: 3.2rem;
}

h4 {
  font-size: 1.4rem;
}

.additional-info-container:not(.form-expanding-group-open) {
  & .additional-info-content {
    display: none;
  }
}

.usa-sidenav-list {
  border-color: $color-gray-light;

  & li {
    border-color: $color-gray-light;
  }

  & a {
    color: $color-gray-dark;
    padding: units(2) units(1);

    & h3 {
      font-weight: normal;
      font-size: 1.4rem;
    }

    &.usa-current {
      padding: units(2) units(1);
      color: $color-gray-dark;

      & h3 {
        font-weight: bold;
      }
    }
  }
}

@media screen and (max-width: $medium-screen) {
  .usa-sidenav-list {

    border-top: 0;
    margin-bottom: units(2);

    & li {
      border-top: 0;
    }

    & a {
      text-align: center;

      &.usa-current {
        border-left: 0;
        border-bottom: .4rem solid $color-blue;
      }
    }
  }
}

.chart-nav * {
  pointer-events: none; // force mouse clicks to have a "target" of their immediate parent - the chart tabs
}

